--- a/nav-mod.css
+++ b/nav-mod.css
@@ -123,9 +123,9 @@ div #active {
 }
 
 #main {
-  margin-left: 260px;
+  margin-left: 2rem;
   margin-top: 0px;
-  width: 68%;
+  width: 88%;
   position: absolute;
   text-align: left;
 }
